# Qhack-2026

./: .gitignore  Makefile  README.md  dev.sh  package-lock.json
backend/: .env.example  pyproject.toml  render.yaml
backend/app/: main.py
backend/app/agents/: __init__.py  registry.py
backend/app/agents/base/: agent.py  llm.py  types.py
backend/app/agents/memory/: memory.py
backend/app/agents/orchestrator/: orchestrator.py
backend/app/agents/sales/: analysis.py  data_gathering.py  financial.py  pitch_deck.py  research.py  schemas.py  strategy.py  supervisor.py
backend/app/agents/tools/: base_tool.py  nominatim.py  pvgis.py  smard.py  web_search.py
backend/app/api/routes/: __init__.py  agents.py  chat.py  conversations.py  deliverables.py  documents.py  leads.py  projects.py  report.py  voice.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: conversation.py  deliverable.py  project.py
backend/app/schemas/: agent.py  chat.py  project.py
backend/app/services/: chat_service.py
backend/data/: leads.json
backend/tests/unit/: test_health.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useChat.ts  useVoiceChat.ts  useVoiceInput.ts
frontend/src/pages/: FormPage.jsx  HomePage.jsx  LeadDetailPage.jsx  ReportPage.jsx
frontend/src/services/: api.ts  websocket.ts
infra/scripts/: dev.sh  setup.sh
shared/schemas/: events.json
(+21 files in other folders)
